Added NLP_App notebook with Gradio GUI's

--- a/NLP_Transformers_Pipelines.ipynb
+++ b/NLP_Transformers_Pipelines.ipynb
@@ -209,7 +209,7 @@
     }
    ],
    "source": [
-    "print(question_answering_pipeline(question=f\"How tall is the pyramid of Giza\", context=text))\n",
+    "print(question_answering_pipeline(question=f\"How tall is the pyramid of Giza?\", context=text))\n",
     "print(question_answering_pipeline(question=f\"Is the pyramid of Giza one of the Ancient World Wonders?\", context=text))"
    ]
   },
